@@ -34,6 +34,12 @@
       <arg choice="opt">
         readenv=<replaceable>0|1</replaceable>
       </arg>
+      <arg choice="opt">
+        user_envfile=<replaceable>env-file</replaceable>
+      </arg>
+      <arg choice="opt">
+        user_readenv=<replaceable>0|1</replaceable>
+      </arg>
     </cmdsynopsis>
   </refsynopsisdiv>
 
@@ -115,6 +121,33 @@
         </listitem>
       </varlistentry>
 
+
+      <varlistentry>
+        <term>
+          <option>user_envfile=<replaceable>filename</replaceable></option>
+        </term>
+        <listitem>
+          <para>
+            Indicate an alternative <filename>.pam_environment</filename>
+            file to override the default. This can be useful when different
+            services need different environments. The filename is relativ to
+            the user home directory.
+          </para>
+        </listitem>
+      </varlistentry>
+
+      <varlistentry>
+        <term>
+          <option>user_readenv=<replaceable>0|1</replaceable></option>
+        </term>
+        <listitem>
+          <para>
+            Turns on or off the reading of the user specific environment
+            file. 0 is off, 1 is on. By default this option is on.
+          </para>
+        </listitem>
+      </varlistentry>
+
     </variablelist>
   </refsect1>
 
@@ -177,6 +210,12 @@
         <term><filename>/etc/environment</filename></term>
         <listitem>
           <para>Default environment file</para>
+        </listitem>
+      </varlistentry>
+      <varlistentry>
+        <term><filename>$HOME/.pam_environment</filename></term>
+        <listitem>
+          <para>User specific environment file</para>
         </listitem>
       </varlistentry>
     </variablelist>
