@@ -21,6 +21,7 @@ Release 1.0.90
 * New pam_timestamp module for authentication based on recent successful
   login.
 * Add blowfish support to pam_unix.
+* Add support for user specific environment file to pam_env.
 
 Release 1.0.2
 
